[package]
name = "qiao"
version = "0.1.0"
edition = "2021"
description = "本地 LLM provider / 密钥 管家:配置只存引用,key 走 keychain/bw/env,产出 .env 与 LangChain 片段"
license = "MIT"

[[bin]]
name = "qiao"
path = "src/main.rs"

# 依赖按 docs/design.md D1 钉主版本。v1 全同步,不引入 async。
# bw 后端走 std::process::Command,不额外引入 crate。
[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"   # 读写 models.dev JSON 缓存(~/.cache/qiao/modelsdev.json);随 reqwest json 特性已在依赖树中
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
keyring = { version = "3", features = ["apple-native"] }   # 必须启用 OS 后端,否则 keyring 3.x 用 mock store。v1 仅 macOS
arboard = "3"
rpassword = "7"   # key set 的隐藏输入(D6:不经 argv/history)
directories = "5"
anyhow = "1"
thiserror = "2"
zeroize = "1"
